[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-holdcounter"
version = "2.0.6"
description = """A ComfyUI custom node that emits a held, range-bound integer index with multiple \
advancement modes (loop, clamp, pingpong, random, shuffle) — useful as a Load Image batch index \
that advances every N runs."""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mitch" }]
keywords = ["comfyui", "comfy", "custom-node", "counter", "batch", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-sugar>=1",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/mitch-avis/ComfyUI-HoldCounter"
Repository = "https://github.com/mitch-avis/ComfyUI-HoldCounter"
Issues = "https://github.com/mitch-avis/ComfyUI-HoldCounter/issues"

# ComfyUI Registry / Manager metadata. See: https://docs.comfy.org/registry/overview
[tool.comfy]
PublisherId = "mitch-avis"
DisplayName = "ComfyUI-HoldCounter"
Icon = ""
tags = ["utils", "batch", "automation", "counter"]
includes = ["web"]

[tool.hatch.build.targets.wheel]
packages = ["_impl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "RUF"]
# INPUT_TYPES / IS_CHANGED are required ComfyUI API names.
ignore = ["N802"]

[tool.pyright]
include = ["_impl", "__init__.py", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --import-mode=importlib"
